	Collapse IPMICONSOLE_ERR_CTX_ALREADY_SUBMITTED into
	IPMICONSOLE_ERR_CTX_IS_SUBMITTED.

	* ipmiconsole/: Change
	IPMICONSOLE_ERR_INTERNAL_BMC_SETTINGS_INVALID to
	IPMICONSOLE_ERR_BMC_IMPLEMENTATION.  Adjust some error code return
	values accordingly.

	* ipmiconsole/src/libipmiconsole/ipmiconsole.h,
	ipmiconsole/src/libipmiconsole/ipmiconsole.c: Re-order error
	codes.
	
2007-08-17  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/: Fix documentation/comments.  Continued library
	fixes.  Support IPMICONSOLE_ENGINE_CLOSE_FD flag.  Support new
	IPMICONSOLE_ERR_TOO_MANY_OPEN_FILES error code.  Set close-on-exec
	on all file descriptors.  Fix race conditions and logic bugs.
	
2007-08-16  Albert Chu <chu11@llnl.gov>
	
	* common/doc/manpage-common-troubleshooting.man: Clean up text.

	* ipmimonitoring/ipmimonitoring.8.pre.in: Add ipmimonitoring
	specific troubleshooting.

	* ipmiconsole/src/libipmiconsole/: Significant code cleanup, race
	condition fixes, scalability fixes, logic fixes, bug fixes.

2007-08-15  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/libipmiconsole/: Re-do enginecomm code to be
	specific to submission blocking.  Re-work logic to close file
	descriptors after blocking is completed to save two file
	descriptors per context.

	* Various manpage updates.

	* common/doc/manpage-common-troubleshooting.man: New file.

	* Update various manpages with troubleshooting information.

	* ipmiconsole/src/libipmiconsole/ipmiconsole.h,
	ipmiconsole/src/libipmiconsole/ipmiconsole.c
	(ipmiconsole_engine_submit): Add back blocking flag parameter.

	* ipmiconsole/: Adjust remaining code appropriately.
	
2007-08-14  Albert Chu <chu11@llnl.gov>

	* bmc-config/: Support no checkout for sections.  Do not checkout
	section pef_conf by default.

	* pef-config/: Support same architecture as bmc-config for
	consistency.
	
2007-08-14  Albert Chu <chu11@llnl.gov>

	* bmc-config/src/bmc-config-sections.c
	(bmc_config_section_set_value): Add error messages.
